@@ -83,12 +83,4 @@ else
     JAVA=java
 fi
 
-# Extend wsimport options with options specific to modular JDK
-RUN_OPTS="$WSIMPORT_OPTS"
-"$JAVA" -cp "$JAXWS_HOME/lib/jaxws-rt.jar" com.sun.xml.ws.util.ModuleHelper
-if [ $? -ne 0 ]
-then
-    RUN_OPTS="--add-modules java.xml.ws $RUN_OPTS"
-fi
-
-exec "$JAVA" $RUN_OPTS -jar "$JAXWS_HOME/lib/jaxws-tools.jar" "$@"
+exec "$JAVA" $WSIMPORT_OPTS -jar "$JAXWS_HOME/lib/jaxws-tools.jar" "$@"
